RESOLVED FIXED43762
Fix three ASSERTs hit with the HTML5 TreeBuilder in fragment mode
https://bugs.webkit.org/show_bug.cgi?id=43762
Summary Fix three ASSERTs hit with the HTML5 TreeBuilder in fragment mode
Eric Seidel (no email)
Reported 2010-08-09 17:58:14 PDT
Fix three ASSERTs hit with the HTML5 TreeBuilder in fragment mode
Attachments
Patch (7.48 KB, patch)
2010-08-09 18:02 PDT, Eric Seidel (no email)
no flags
The missing pieces (2.83 KB, patch)
2010-08-10 10:28 PDT, Eric Seidel (no email)
no flags
merged patch (9.60 KB, patch)
2010-08-11 00:31 PDT, Adam Barth
no flags
Eric Seidel (no email)
Comment 1 2010-08-09 18:02:52 PDT
Adam Barth
Comment 2 2010-08-09 20:34:11 PDT
Comment on attachment 63963 [details] Patch LayoutTests/ChangeLog:8 + In order to fix the insertAdjacentHTML I had to some behavior. change?
Eric Seidel (no email)
Comment 3 2010-08-10 00:29:45 PDT
WebKit Review Bot
Comment 4 2010-08-10 01:04:16 PDT
http://trac.webkit.org/changeset/65056 might have broken Qt Linux Release
Csaba Osztrogonác
Comment 5 2010-08-10 03:53:31 PDT
Reopened, because it was rolled out by http://trac.webkit.org/changeset/65064
Csaba Osztrogonác
Comment 6 2010-08-10 03:54:18 PDT
Comment on attachment 63963 [details] Patch remove r+ from this obsolete patch
Eric Seidel (no email)
Comment 7 2010-08-10 10:28:44 PDT
Created attachment 64025 [details] The missing pieces
Adam Barth
Comment 8 2010-08-11 00:31:20 PDT
Created attachment 64083 [details] merged patch
Adam Barth
Comment 9 2010-08-11 00:32:48 PDT
This patch seems to cause two inspector tests to crash... Not really sure what's going on.
Adam Barth
Comment 10 2010-08-11 00:47:44 PDT
Hum... Running the tests a few more times, it just looks like flakiness.
Adam Barth
Comment 11 2010-08-11 00:51:25 PDT
Note You need to log in before you can comment on or make changes to this bug.