WebCore/html/HTMLTreeBuilder.cpp
@@ -1997,7 +1997,9 @@ void HTMLTreeBuilder::processEndTagForInCell(AtomicHTMLToken& token)
         m_tree.openElements()->popUntilPopped(token.name());
         m_tree.activeFormattingElements()->clearToLastMarker();
         setInsertionMode(InRowMode);
-        ASSERT(m_tree.currentElement()->hasTagName(trTag));
+        // FIXME: The fragment case of this ASSERT is a spec bug:
+        // http://www.w3.org/Bugs/Public/show_bug.cgi?id=10338
+        ASSERT(m_tree.currentElement()->hasTagName(trTag) || (isParsingFragment() && m_fragmentContext.contextElement()->hasTagName(trTag)));
         return;
     }
     if (token.name() == bodyTag
